[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/hud/HealthBarUnder.png" type="Texture" id=2]
[ext_resource path="res://assets/hud/HealthBarOver.png" type="Texture" id=3]
[ext_resource path="res://assets/hud/HealthBarProgress.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/slkscr.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/hud/DialogBox.png" type="Texture" id=6]
[ext_resource path="res://assets/hud/DialogBoxButton.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[sub_resource type="InputEventAction" id=3]
action = "accept"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 5 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="HealthBar" type="TextureProgress" parent="Node2D"]
margin_left = 6.99994
margin_top = 560.0
margin_right = 36.9999
margin_bottom = 590.0
rect_scale = Vector2( 6.68, 6.68 )
value = 100.0
texture_under = ExtResource( 2 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[node name="HealthLabel" type="Label" parent="Node2D"]
margin_left = 7.0
margin_top = 560.0
margin_right = 187.0
margin_bottom = 593.0
custom_fonts/font = SubResource( 1 )
text = "100"
align = 1
valign = 1

[node name="DialogBox" type="Node2D" parent="Node2D"]
editor/display_folded = true

[node name="Background" type="Sprite" parent="Node2D/DialogBox"]
position = Vector2( 504.22, 535.119 )
scale = Vector2( 8.96371, 7.25002 )
texture = ExtResource( 6 )

[node name="Text" type="Label" parent="Node2D/DialogBox"]
margin_left = 237.0
margin_top = 494.0
margin_right = 771.0
margin_bottom = 577.0
custom_fonts/font = SubResource( 2 )
autowrap = true
clip_text = true

[node name="AcceptButton" type="TextureButton" parent="Node2D/DialogBox"]
margin_left = 741.778
margin_top = 558.341
margin_right = 745.778
margin_bottom = 561.341
rect_scale = Vector2( 5.83999, 5.83999 )
shortcut = SubResource( 4 )
texture_normal = ExtResource( 7 )
expand = true

[node name="RoundCountdownLabel" type="Label" parent="Node2D"]
margin_top = -0.773804
margin_right = 1022.0
margin_bottom = 600.226
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1

[node name="BossHealthBar" type="TextureProgress" parent="Node2D"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 282.0
margin_top = 11.1459
margin_right = 742.0
margin_bottom = 51.1459
value = 100.0
texture_under = ExtResource( 2 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true

[node name="BossHealthLabel" type="Label" parent="Node2D"]
visible = false
margin_left = 282.0
margin_top = 11.0
margin_right = 742.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 6 )
text = "Slime Boss: 20000 Health"
align = 1
valign = 1

[node name="EnemiesLeftDisplay" type="Node2D" parent="Node2D"]
editor/display_folded = true
position = Vector2( 968.114, 570.096 )

[node name="Background" type="Sprite" parent="Node2D/EnemiesLeftDisplay"]
position = Vector2( -22.7995, 1.86502 )
scale = Vector2( 2.34915, 3.10163 )
texture = ExtResource( 6 )

[node name="Text" type="Label" parent="Node2D/EnemiesLeftDisplay"]
margin_left = -98.0
margin_top = -22.0
margin_right = 52.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 7 )
align = 1
valign = 1

[connection signal="pressed" from="Node2D/DialogBox/AcceptButton" to="." method="_on_TextureButton_pressed"]
